--- a/src/Component/Features/popup/image/style.module.css
+++ b/src/Component/Features/popup/image/style.module.css
@@ -3,10 +3,15 @@
 .imgleft{
     width:12%;
 }
-.imgleft img{
-    width: 100%;
+
+.imgleft button{
+    width: 68px;
     height: 68px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border: none;
+}
+button:hover{
+    border: 2px solid orangered;
 }
 @media screen and (max-width:768px) {
     .imgleft{
