--- a/src/Component/Explore/styles.css
+++ b/src/Component/Explore/styles.css
@@ -22,7 +22,6 @@
 .show_more_icon{
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 174px;
     height: 40px;
     letter-spacing: 2px;
@@ -36,6 +35,14 @@
     margin-top: 30px;
     margin-bottom: 50px;
    
+}
+.show_more_icon:hover{
+    width: 177px;
+    height: 40px;
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+
 }
 .tab{
     display: flex;
