--- a/src/Component/Features/popup/Details/style.module.css
+++ b/src/Component/Features/popup/Details/style.module.css
@@ -1,5 +1,7 @@
 .main{
     margin-bottom:0px;
+
+
 }
 
 .description{
@@ -8,20 +10,29 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(202, 202, 202);
+    margin-bottom: 0px;
+}
+.container{
+    margin-top:0px;
 }
 .row{
     display: flex;
     padding: 5px 10px 5px 0px;
     border-bottom: 1px solid rgb(202, 202, 202);
-    margin: 0px;
 }
 .header{
     width: 50%;
     margin: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px
 }
 .paragraph{
 width: 50%;
-margin: 0;
+margin: 0px;
+margin-top: 10px;
+margin-bottom: 10px
 }
 .quantity{
     margin-top: 10px;
@@ -29,7 +40,12 @@ margin: 0;
 .quantity2{
     font-size: 14px ;
     color:rgb(126, 124, 124);
+    padding: 10px 0px 10px 0px;
 }
+/* .seeMore{
+    border: none;
+    background-color: white;
+} */
 
 /* @media screen and (max-width:768px) {
 
