--- a/src/Component/Features/popup/image/style.module.css
+++ b/src/Component/Features/popup/image/style.module.css
@@ -5,13 +5,17 @@
 }
 
 .imgleft .button{
-    width: 68px;
-    height: 68px;
+    /* width: 68px;
+    height: 68px; */
     margin-bottom: 20px;
     border: none;
+    width: 100%;
 }
 .button:hover{
     border: 2px solid orangered;
+}
+.innerImg{
+    width: 100%;
 }
 @media screen and (max-width:768px) {
     .imgleft{
