--- a/src/Component/Features/popup/style.module.css
+++ b/src/Component/Features/popup/style.module.css
@@ -1,55 +1,64 @@
-.title{
-    display: flex;
-    justify-content: space-between;
+.title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
-.main{
-    padding-top: 24px;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: inset 0 0 15px rgba(0,0,0, 0.05);
-    background-color: rgba(255,255,255, 1);
+.main {
+  padding-top: 24px;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.05);
+  background-color: rgba(255, 255, 255, 1);
 }
 
-
-.left{
-    display: flex;
-    width: 50%;
-    justify-content: space-between;
+.left {
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
 }
 .imgright {
-    width:83%;
+  width: 83%;
 }
-.imgright img{
+.imgright img {
+  width: 100%;
+}
+.right {
+  width: 50%;
+}
+.container {
+  margin: 0px 26px 0px 29px;
+}
+.heading {
+  display: flex;
+  justify-content: space-between;
+}
+.price{
+  color: #FF6008;
+}
+.rating{
+  color: #666666;
+  font-size: 16px;
+}
+.title{
+  color: #030303;
+  font-size: 24px;
+}
+@media screen and (max-width: 768px) {
+  .main {
+    flex-direction: column;
+    padding-top: 10px;
+    overflow-x: hidden;
+  }
+  .left {
     width: 100%;
-}
-.right{
-    width: 50%;
-}
-.container{
-    margin: 0px 26px 0px 29px;
-}
-.heading{
-    display: flex;
-    justify-content: space-between;
-}
-@media screen and (max-width:768px) {
-    .main {
-        flex-direction: column;
-        padding-top: 10px;
-        overflow-x: hidden;
-
-    }
-    .left{
-        width: 100%;
-        flex-direction: column;
-        margin-bottom: 30px;
-    }
-    .imgright {
-        width:100%;
-    }
-    .right{
-        width: 100%;
-    }
-
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  .imgright {
+    width: 100%;
+  }
+  .right {
+    width: 100%;
+  }
 }
