--- a/src/Component/Features/popup/image/style.module.css
+++ b/src/Component/Features/popup/image/style.module.css
@@ -1,22 +1,28 @@
-
-
 .imgleft{
     width:12%;
+
 }
 
 .imgleft .button{
     /* width: 68px;
     height: 68px; */
-    margin-bottom: 20px;
     border: none;
     width: 100%;
 }
-.button:hover{
-    border: 2px solid orangered;
+.border{
+    border:2px solid orangered
 }
+
 .innerImg{
+    margin-bottom: 10px;
     width: 100%;
 }
+.imgright {
+    width: 83%;
+  }
+  .imgright img {
+    width: 100%;
+  }
 @media screen and (max-width:768px) {
     .imgleft{
         display: flex;
